hphp/hack/test/typecheck/concat_untyped_with_string.php.exp
File "concat_untyped_with_string.php", line 3, characters 23-24:
Was expecting a type hint (Typing[4032])
