hphp/hack/test/typecheck/concat_untyped_with_string.php
<?hh

function f(/* TAny */ $a): string {
  return 'a' . $a;
}
